style.css
/*
Theme Name: Health-Center-Pro
Theme URI: 
Author: Webriti
Author URI: http://webriti.com/
Description: 
Version:  1.1.3
Tags: white,full-width-template, threaded-comments,custom-menu,two-columns,translation-ready
License: GNU General Public License v3 or later
License URI: http://www.gnu.org/licenses/gpl.html
Text Domain: health
* Health Center Css created By Shahid - Scientech IT
*/

/* Main css with editable-------------------------------------------------------------- */
.row {
    margin-left: 0px !important;
    margin-right: 0px !important;
} 
/* Header Section css-------------------------------------------------------------- */ 
body {
    padding:0 10px;
	background: url("../images/bg-patterns/whitey.png") repeat scroll 0 0 rgba(0, 0, 0, 0);
}
#wrapper{	
	margin: 25px auto;
    left: 0;
    position: relative;
    transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
}
.container {
    padding-left: 0px !important;
    padding-right: 0px !important;
}

/* Maksim Slavin - Start: Override theme default classes */
@media (min-width: 768px)
{
    .navbar-container.container {
        width: 100%;
    }
    .page-template-service-template .healthcare-services .col-sm-6 {
        min-height: 180px;
    }
    .gmap2 {
        margin-left: 0px;
    }
}

@media (min-width: 992px)
{
    .page-template-service-template .healthcare-services .col-md-4 {
        min-height: 210px;
    }

    .hc_footer_widget_area .hc_footer_area .col-md-10 {
        padding-left: 25px;
    }

    .gmap2 {
        margin-left: 70px;
    }
}

.appointments_button {
    margin-top: 40px;
    margin-bottom: 0px;
}

.gmap {
    float: left;
}
.gmap iframe {
    width: 530px;
    height: 300px;
}
.gmap .hc_contactv1_address {
    margin-top: 20px;
    width: 510px;
}

.hc_footer_widget_area .container {
    margin-left: 0px;
}

.header_section .container {
    width: 100%;
    height: 156px;
    margin-left: 0px;
    margin-right: 0px;
}

.header_section .col-md-6 {
    width: 345px;
    padding-right: 0px;
    padding-left: 30px;
}

.header_section .row {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/OMG-Banner-Long-e1429475601904.png");
    background-repeat: no-repeat;
    background-position: 350px 3px;
    background-size: 848px 151px;
}

.header_section .banner {
    width: 848px;
    height: 156px;
    margin-left: 5px;
}

.navigation_section {
    background: none repeat scroll 0 0 #00BFF2;
}

.navigation_section .navbar-nav > li > a {
    border-right: 1px solid #00a7d4;
}
/* Maksim Slavin - End: Override theme default classes */


/* Maksim Slavin - Start: Service Image Overrides */
.page-template-service-template .healthcare-services .hc_main_service {
    border-radius: 0;
    transition-duration: 0s;
    background-repeat: no-repeat;
    width: 100px;
    height: 105px;
}

.page-template-service-template .healthcare-services .hc_service_section {
    margin: 0;
}

.page-template-service-template .healthcare-services .chiropractic {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/chiropractic-e1430278455461.png");
}

.page-template-service-template .healthcare-services .cosmetic {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/cosmetic-e1430276840936.png");
}

.page-template-service-template .healthcare-services .endocrinology {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/endocrinology-e1430275844284.png");
}

.page-template-service-template .healthcare-services .nutri_inject {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/nutri_inject-e1430278445731.png");
}

.page-template-service-template .healthcare-services .pain_mgt {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/pain-e1430275833403.png");
}

.page-template-service-template .healthcare-services .phys_med {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/phys_med-e1430278433451.png");
}

.page-template-service-template .healthcare-services .phys_therapy {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/phys_therapy-e1430278420476.png");
}

.page-template-service-template .healthcare-services .prolotherapy {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/prolotherapy-e1430278409447.png");
}

.page-template-service-template .healthcare-services .sports_injury {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/sports_injury-e1430278396703.png");
}

.page-template-service-template .healthcare-services .weight_loss {
    background-image: url("http://optimizemedicalgroup.dev/wp-content/uploads/2015/04/weight_loss-e1430278465291.png");
}
/* Maksim Slavin - End: Service Image Overrides */


.hc_logo {
	/* margin-top: 40px; */
    margin: 20px 15px;
}
.hc_logo h1 {
	font-size: 36px;
	line-height: 60px;
	font-family: 'Fely';
	font-weight: 600;
	margin: 0px;
	padding: 3px 0;
}
.hc_logo h1 > a {
    padding-right: 30px;
    /* Maksim Slavin - added line below to hide Health Center theme logo */
    background-image: none;
}
.head_cont_info {
	margin-top: 30px;
	display: block;
	float: right;
}
.head_cont_info li {
	display: inline;
	padding-left: 10px;
	margin-left: 10px;
}
.head_cont_info i {
	font-size: 18px;
    margin-right: 10px;
}
.mini-ico-envelope {
	background-position: -72px 0;
}
.mini-ico-user {
	background-position: -168px 0;
}
.head_cont_info a {
	font-size: 15px;
	font-family: 'RalewayRegular';
}
a:hover, a:focus{
	text-decoration: none !important;
}
.head_social_icons {
	margin: 6px 0 30px;
	float: right;
}
/* ... */

